[gd_scene load_steps=10 format=3 uid="uid://e3ps8cueughe"]

[ext_resource type="Script" uid="uid://cugay3hao8gkq" path="res://script/level/boon_choice_button.gd" id="1_jduhr"]
[ext_resource type="Texture2D" uid="uid://c1lqcsam6gls0" path="res://assets/DialogueBox.png" id="2_2tm14"]
[ext_resource type="FontFile" uid="uid://kbyiuatbkcsx" path="res://assets/fonts/default_font.ttf" id="3_tauos"]
[ext_resource type="PackedScene" uid="uid://ynqo1h8r21li" path="res://scene/boon_icon_texture.tscn" id="4_8jbkv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8jbkv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1k0l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f5bi7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m7g4b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ibbc3"]

[node name="BoonChoiceButton" type="Button"]
custom_minimum_size = Vector2(320, 100)
offset_right = 693.0
offset_bottom = 325.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_8jbkv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n1k0l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f5bi7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_m7g4b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ibbc3")
script = ExtResource("1_jduhr")

[node name="DialogueBox" type="Sprite2D" parent="."]
position = Vector2(239.00002, -10.999999)
scale = Vector2(0.7026041, 0.6398148)
texture = ExtResource("2_2tm14")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = -33.0
offset_right = 358.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("3_tauos")
theme_override_font_sizes/font_size = 30
text = "Title"
vertical_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 52.0
offset_right = 533.0
offset_bottom = 270.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_tauos")
theme_override_font_sizes/font_size = 30
text = "DESC"
autowrap_mode = 3

[node name="BoonIconTexture" parent="." instance=ExtResource("4_8jbkv")]
position = Vector2(633, 172)
scale = Vector2(2, 2)
